deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: nidhishbhimrajka/fair-rent-split:latest
        ports:
        - containerPort: 5000
        command: ["flask", "run", "--host=0.0.0.0"]
      imagePullSecrets:
      - name: secret/my-secret
